test/langtools/tools/javac/annotations/repeatingAnnotations/brokenTypeAnnoContainer/BrokenTypeAnnoContainer.out
BrokenTypeAnnoContainer.java:14:20: compiler.err.duplicate.annotation.invalid.repeated: T
1 error
